Add Sequelize ORM, have not tested it yet -- need to set up POST functionality

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request": "^2.81.0",
+    "sequelize": "^4.28.7",
     "underscore": "^1.8.3"
   }
 }
