--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "jquery": "^3.1.1",
     "lodash": "^4.17.4",
     "mongoose": "^4.13.8",
+    "mysql2": "^1.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
     "request": "^2.81.0",
