Add react-fade-in to dependencies, use FadeIn on EventList and FavoritesList

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "mysql2": "^1.5.1",
     "react": "^15.4.2",
     "react-dom": "^15.4.2",
+    "react-fade-in": "^0.1.5",
     "request": "^2.81.0",
     "sequelize": "^4.28.7",
     "underscore": "^1.8.3"
